# yagna_connect

./: .gitignore  README.md  check_yagna.py  common_yagna_config.env  connect.py  connect2.py  pyproject.toml
centralnet/: docker-compose.yml
provider/: .gitignore  Dockerfile  Dockerfile_FromSource  auto_connect_vpn.py  docker-compose.yml  gen_env.py  install_outbound_from_release_tag.sh  install_provider_from_release_tag.sh  install_vm_from_release_tag.sh  install_yagna_from_release_tag.sh  print_exe_unit_logs.py  print_outbound_logs.py  print_vm_logs.py  run_provider.sh
provider/ya-provider/: presets.json
provider/ya-runtime-outbound/: ya-runtime-outbound.json
relaynet/: Dockerfile  docker-compose.yml  run_relaynet.sh
requestor/: Dockerfile  Dockerfile_FromSource  docker-compose.yml  gen_env.py  install_requestor_from_release_tag.sh  install_yaftp_from_release_tag.sh  run_requestor.sh  yagna_mon.py
run/all/: .gitignore  build_and_run_prov.bat  docker-compose.yml  gen_env.py  yagna_config.env
run/compile/: docker-compose.yml  yagna_config.env
run/nocompile/: docker-compose.yml  yagna_config.env
vpn_client/: Dockerfile  Dockerfile_FromSource  install_connector_from_release_tag.sh  run_vpn_client.sh  test_tcp_connection.sh  vpn_mon.py
